fix accordion title text align

--- a/src/common/scss/blocks/helsinki/_accordion.scss
+++ b/src/common/scss/blocks/helsinki/_accordion.scss
@@ -33,6 +33,7 @@
 		padding: spacing('s') 0;
 		line-height: 24px;
 		margin: 0;
+    text-align: left;
 		width: 100%;
 
 		.accordion__icon {
